--- a/css/status.css
+++ b/css/status.css
@@ -30,4 +30,4 @@ MIT License | Copyright (c) 2021 Absucc */
   --submit-button-color:white;
   --graph-opacity:1;
   /* --graph-filter: brightness(0.35) sepia(1) hue-rotate(88deg) saturate(8); */
-}body{padding:2%;color:white;margin-left:auto;margin-right:auto;}.logo{width:5%}
+}
